syntax = "proto3";

package prod.service.v1;

import "google/api/annotations.proto";

option go_package = "api/prod/service/v1;v1";


service ProdService {
  rpc GetSkuByCond (GetSkuByCondRequest) returns (GetSkuByCondReply) {
  }
}

message PageInfo  {
  int64 page = 1;
  int64 pageSize = 2;
}

message GetSkuByCondRequest{
  Sku skuCond = 1;
  PageInfo pageInfo = 2;
}

message GetSkuByCondReply {
  uint32  retCode = 1;
  string  retMsg = 2;
  CartPagination data = 3;
}

message GetCartByCondReply{
  uint32  retCode = 1;
  string  retMsg = 2;
  CartPagination data = 3;
}

message CartPagination{
  repeated Sku  list = 1;
  int64 total = 2;
  int64 page = 3;
  int64 pageSize = 4;
}

message Sku {
  uint64 skuId = 1;
  string skuName = 2;
  string prodName = 3;
  uint64 prodId = 4;
  int32 price = 5;
  int32 oriPrice = 6;
  int32 packingFee = 7;
  uint32 shopId = 8;
  string pic = 9;
  string imags = 10;
  uint32 weight = 11;
  uint32 sellStatus = 12;
  uint32 stock = 13;
}

